--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ repositories {
 }
 
 dependencies {
+    compile "com.google.guava:guava:24.0-jre"
+
     testCompile "org.junit.jupiter:junit-jupiter-api:5.0.3"
     testRuntime "org.junit.jupiter:junit-jupiter-engine:5.0.3"
 }
