--- a/silverexchange-xchange/build.gradle
+++ b/silverexchange-xchange/build.gradle
@@ -1,5 +1,6 @@
+version '1.0'
+
 apply plugin: 'java'
-apply plugin: 'org.junit.platform.gradle.plugin'
 
 sourceCompatibility = 1.8
 
@@ -8,7 +9,10 @@ repositories {
 }
 
 dependencies {
-    compile "com.google.guava:guava:24.0-jre"
+    compile ":silverexchange-core"
+    compile 'org.knowm.xchange:xchange-core:4.3.3'
+
+    testRuntime 'org.slf4j:slf4j-simple:1.7.25'
 
     testCompile "org.junit.jupiter:junit-jupiter-api:${v_junit}"
     testRuntime "org.junit.jupiter:junit-jupiter-engine:${v_junit}"
