--- a/silverexchange-core/build.gradle
+++ b/silverexchange-core/build.gradle
@@ -12,4 +12,5 @@ dependencies {
 
     testCompile "org.junit.jupiter:junit-jupiter-api:${v_junit}"
     testRuntime "org.junit.jupiter:junit-jupiter-engine:${v_junit}"
+    testCompile 'org.mockito:mockito-core:2.15.0'
 }
