--- a/silverexchange-core/build.gradle
+++ b/silverexchange-core/build.gradle
@@ -10,6 +10,7 @@ repositories {
 dependencies {
     compile "com.google.guava:guava:24.0-jre"
 
+    testCompile project(':silverexchange-test')
     testCompile "org.junit.jupiter:junit-jupiter-api:${v_junit}"
     testRuntime "org.junit.jupiter:junit-jupiter-engine:${v_junit}"
     testCompile 'org.mockito:mockito-core:2.15.0'
