--- a/silverexchange-xchange/build.gradle
+++ b/silverexchange-xchange/build.gradle
@@ -12,8 +12,8 @@ dependencies {
     compile project(":silverexchange-core")
     compile 'org.knowm.xchange:xchange-core:4.3.3'
 
+    testCompile project(':silverexchange-test')
     testRuntime 'org.slf4j:slf4j-simple:1.7.25'
-
     testCompile "org.junit.jupiter:junit-jupiter-api:${v_junit}"
     testRuntime "org.junit.jupiter:junit-jupiter-engine:${v_junit}"
 }
