--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,20 @@
 language: java
 
+sudo: false
+
 jdk:
   - oraclejdk8
 # Gradle doesn't like jdk9
 #  - oraclejdk9
+
+#Gradle
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
 
 #Codeclimate
 env:
