--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,16 @@ buildscript {
 
 version = '1.0'
 
-repositories {
-    mavenCentral()
+ext {
+    v_junit = "5.0.3"
 }
 
-ext{
-    v_junit = "5.0.3"
+subprojects {
+    apply plugin: 'java'
+
+    sourceCompatibility = 1.8
+
+    repositories {
+        mavenCentral()
+    }
 }
