--- a/silverexchange-xchange/build.gradle
+++ b/silverexchange-xchange/build.gradle
@@ -1,12 +1,4 @@
-version '1.0'
-
-apply plugin: 'java'
-
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
+apply plugin: 'org.junit.platform.gradle.plugin'
 
 dependencies {
     compile project(":silverexchange-core")
