--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,16 @@ sudo: false
 
 jdk:
   - oraclejdk8
-# Gradle doesn't like jdk9
-#  - oraclejdk9
+  - oraclejdk9
+
+install:
+  # Download desired version of Gradle
+  - wget http://services.gradle.org/distributions/gradle-4.5.1-bin.zip
+  - unzip -qq gradle-4.5.1-bin.zip
+  - export GRADLE_HOME=$PWD/gradle-4.5.1
+  - export PATH=$GRADLE_HOME/bin:$PATH
+  # just to test gradle version, against our provided one
+  - gradle -v
 
 #Gradle
 before_cache:
