--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,8 @@ install:
   # Download desired version of Gradle
   - wget http://services.gradle.org/distributions/gradle-4.5.1-bin.zip
   - unzip -qq gradle-4.5.1-bin.zip
-  - export GRADLE_HOME=$PWD/gradle-4.5.1
+  - GRADLE_HOME=$PWD/gradle-4.5.1
   - export PATH=$GRADLE_HOME/bin:$PATH
-  # just to test gradle version, against our provided one
-  - gradle -v
 
 #Gradle
 before_cache:
@@ -23,3 +21,8 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
