--- a/build.gradle
+++ b/build.gradle
@@ -26,4 +26,8 @@ subprojects {
     repositories {
         mavenCentral()
     }
+
+    tasks.withType(Test) {
+        enableAssertions = true
+    }
 }
